# newsNetGet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  newsNetGet.cabal  pyproject.toml
.stack-work/: stack.sqlite3
.stack-work/ghci/1aa29b31/: cabal_macros.h
.stack-work/ghci/54952a29/: cabal_macros.h
.stack-work/ghci/69ea4cd0/: cabal_macros.h
.stack-work/ghci/923808a5/: cabal_macros.h
.stack-work/ghci/d02b5d73/: cabal_macros.h
.stack-work/install/x86_64-linux/39622823a22fce79e9f480b8c2913194ece99901350192df1be7660c081e24ce/9.6.7/pkgdb/: newsNetGet-0.1.0.0-DXSBHDePVZ4CacblEFtSTQ.conf  package.cache
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: newsNetGet-0.1.0.0-inplace.conf  package.cache
src/: ParseNews.hs  netget.py
test/: Main.hs
