cabal-version:      3.0
name:               newsNetGet
version:            0.1.0.0
homepage:           https://github.com/ruzen42/newsNetGet
license:            BSD-3-Clause
license-file:       LICENSE
author:             ruzen42
maintainer:         malledeferlive@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -O2

library
    import:           warnings
    exposed-modules:  ParseNews
    build-depends:    base ^>=4.18.2.1
                    , bytestring 
                    , text
                    , hxt
                    , hxt-css
                    , req
    hs-source-dirs:   src
    default-language: GHC2021

executable newsNetGet
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1
      , optparse-applicative
      , newsNetGet

    hs-source-dirs:   app
    default-language: GHC2021

test-suite newsNetGet-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1
      , newsNetGet
