[project]
name = "netget"
version = "0.1.0"
description = "simple parser for news for my telegram channel"
authors = [
    {name = "ruzen42"}
]
license = {text = "BSD-3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4" 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
